proyecto/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Users\Edgar\Documents\Progra\Greenfoot\MonsterMaster.git\trunk\proyecto
-d
C:\Users\Edgar\Documents\Progra\Greenfoot\MonsterMaster.git\trunk\proyecto\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Edgar\Documents\Progra\Greenfoot\MonsterMaster.git\trunk\proyecto\Jugadores.java
<---- end of javadoc command ---->
Loading source file C:\Users\Edgar\Documents\Progra\Greenfoot\MonsterMaster.git\trunk\proyecto\Jugadores.java...
C:\Users\Edgar\Documents\Progra\Greenfoot\MonsterMaster.git\trunk\proyecto\Jugadores.java:25: error: not a statement
        mov
        ^
C:\Users\Edgar\Documents\Progra\Greenfoot\MonsterMaster.git\trunk\proyecto\Jugadores.java:25: error: ';' expected
        mov
           ^
C:\Users\Edgar\Documents\Progra\Greenfoot\MonsterMaster.git\trunk\proyecto\Jugadores.java:109: error: class, interface, or enum expected
}
^
3 errors
